--- a/source/template/common/dishes-cards.pug
+++ b/source/template/common/dishes-cards.pug
@@ -1,17 +1,44 @@
 section.dishes-cards
     .dishes-cards__wrapper
+        .dishes-card.dishes-card--big
+            .dishes-card__type Полезные статьи
+            h3.dishes-card__title Картофельный салат с салями
+            div.dishes-card__info
+                .date Февраль 29, 2017
+                | |
+                .dishes-card__comments
+                    i.fas.fa-comments
+                    | 0
+            img.dishes-card__img--big(src="assets/img/dishes-big-card.jpg" alt="dishes photo")
+            p.dishes-card__paragraph.dishes-card__paragraph--big Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+            .dishes-card__links
+                a.dishes-card__more(href="#")
+                    | Подробнее
+                    .fas.fa-angle-right
+                .socials
+                    a.socials__link.socials__link--big-card(href="#")
+                        i.fab.fa-facebook-f
+                    a.socials__link.socials__link--big-card(href="#")
+                        i.fab.fa-vk
+                    a.socials__link.socials__link--big-card(href="#")
+                        i.fab.fa-twitter
+                    a.socials__link.socials__link--big-card(href="#")
+                        i.fab.fa-instagram
         .dishes-card
             img(src="assets/img/dishes-1.jpg" alt="dishes photo")
             .dishes-card__type Ужин
             h3.dishes-card__title Сырники из творога
-            div.dishes-card__date
+            div.dishes-card__info
                 | Февраль 29, 2017
-                | |
-                .coments
-                   | 0
+                .dishes-card__line
+                .dishes-card__comments
+                    i.fas.fa-comments
+                    | 3
             p.dishes-card__paragraph Lorem ipsum dolor amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua.
             .dishes-card__links
-                a.dishes-card__more(href="#") Подробнее
+                a.dishes-card__more(href="#")
+                    | Подробнее
+                    .fas.fa-angle-right
                 .socials
                     a.socials__link(href="#")
                         i.fab.fa-facebook-f
@@ -19,22 +46,23 @@ section.dishes-cards
                         i.fab.fa-vk
                     a.socials__link(href="#")
                         i.fab.fa-twitter
-                    a.socials__link(href="#")
-                        i.fab.fa-instagram
                     a.socials__link(href="#")
                         i.fab.fa-instagram
         .dishes-card
             img(src="assets/img/dishes-2.jpg" alt="dishes photo")
             .dishes-card__type Полезные статьи
             h3.dishes-card__title Конкурс рецептов «Аппетитный перекус»: итоги
-            div.dishes-card__date
+            div.dishes-card__info
                 | Февраль 29, 2017
-                | |
-                .coments
+                .dishes-card__line
+                .dishes-card__comments
+                    i.fas.fa-comments
                     | 0
             p.dishes-card__paragraph Lorem ipsum dolor amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua.
             .dishes-card__links
-                a.dishes-card__more(href="#") Подробнее
+                a.dishes-card__more(href="#")
+                    | Подробнее
+                    .fas.fa-angle-right
                 .socials
                     a.socials__link(href="#")
                         i.fab.fa-facebook-f
@@ -42,22 +70,23 @@ section.dishes-cards
                         i.fab.fa-vk
                     a.socials__link(href="#")
                         i.fab.fa-twitter
-                    a.socials__link(href="#")
-                        i.fab.fa-instagram
                     a.socials__link(href="#")
                         i.fab.fa-instagram
         .dishes-card
             img(src="assets/img/dishes-3.jpg" alt="dishes photo")
             .dishes-card__type Ужин
             h3.dishes-card__title Быстрые бутерброды
-            div.dishes-card__date
+            div.dishes-card__info
                 | Февраль 29, 2017
-                | |
-                .coments
-                    | 0
+                .dishes-card__line
+                .dishes-card__comments
+                    i.fas.fa-comments
+                    | 3
             p.dishes-card__paragraph Neque porro dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia numquam eius modi aliquam quaerat voluptatem.
             .dishes-card__links
-                a.dishes-card__more(href="#") Подробнее
+                a.dishes-card__more(href="#")
+                    | Подробнее
+                    .fas.fa-angle-right
                 .socials
                     a.socials__link(href="#")
                         i.fab.fa-facebook-f
@@ -65,22 +94,23 @@ section.dishes-cards
                         i.fab.fa-vk
                     a.socials__link(href="#")
                         i.fab.fa-twitter
-                    a.socials__link(href="#")
-                        i.fab.fa-instagram
                     a.socials__link(href="#")
                         i.fab.fa-instagram
         .dishes-card
             img(src="assets/img/dishes-4.jpg" alt="dishes photo")
             .dishes-card__type Супы
             h3.dishes-card__title Чечевичный суп
-            div.dishes-card__date
+            div.dishes-card__info
                 | Февраль 29, 2017
-                | |
-                .coments
+                .dishes-card__line
+                .dishes-card__comments
+                    i.fas.fa-comments
                     | 0
             p.dishes-card__paragraph Consectetur adipisicing elit, eiusmod tempor incididunt labore et dolore magna aliqua.
             .dishes-card__links
-                a.dishes-card__more(href="#") Подробнее
+                a.dishes-card__more(href="#")
+                    | Подробнее
+                    .fas.fa-angle-right
                 .socials
                     a.socials__link(href="#")
                         i.fab.fa-facebook-f
@@ -88,22 +118,23 @@ section.dishes-cards
                         i.fab.fa-vk
                     a.socials__link(href="#")
                         i.fab.fa-twitter
-                    a.socials__link(href="#")
-                        i.fab.fa-instagram
                     a.socials__link(href="#")
                         i.fab.fa-instagram
         .dishes-card
             img(src="assets/img/dishes-5.jpg" alt="dishes photo")
             .dishes-card__type закуски
             h3.dishes-card__title Нарезка из фруктов
-            div.dishes-card__date
+            div.dishes-card__info
                 | Февраль 29, 2017
-                | |
-                .coments
-                    | 0
+                .dishes-card__line
+                .dishes-card__comments
+                    i.fas.fa-comments
+                    | 3
             p.dishes-card__paragraph Lorem ipsum dolor amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua.
             .dishes-card__links
-                a.dishes-card__more(href="#") Подробнее
+                a.dishes-card__more(href="#")
+                    | Подробнее
+                    .fas.fa-angle-right
                 .socials
                     a.socials__link(href="#")
                         i.fab.fa-facebook-f
@@ -111,22 +142,23 @@ section.dishes-cards
                         i.fab.fa-vk
                     a.socials__link(href="#")
                         i.fab.fa-twitter
-                    a.socials__link(href="#")
-                        i.fab.fa-instagram
                     a.socials__link(href="#")
                         i.fab.fa-instagram
         .dishes-card
             img(src="assets/img/dishes-6.jpg" alt="dishes photo")
             .dishes-card__type Напитки
             h3.dishes-card__title Коктейль Морской Бриз (Си Бриз - Sea Breeze)
-            div.dishes-card__date
+            div.dishes-card__info
                 | Февраль 29, 2017
-                | |
-                .coments
+                .dishes-card__line
+                .dishes-card__comments
+                    i.fas.fa-comments
                     | 0
             p.dishes-card__paragraph Lorem ipsum dolor amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua.
             .dishes-card__links
-                a.dishes-card__more(href="#") Подробнее
+                a.dishes-card__more(href="#")
+                    | Подробнее
+                    .fas.fa-angle-right
                 .socials
                     a.socials__link(href="#")
                         i.fab.fa-facebook-f
@@ -134,22 +166,23 @@ section.dishes-cards
                         i.fab.fa-vk
                     a.socials__link(href="#")
                         i.fab.fa-twitter
-                    a.socials__link(href="#")
-                        i.fab.fa-instagram
                     a.socials__link(href="#")
                         i.fab.fa-instagram
         .dishes-card
             img(src="assets/img/dishes-7.jpg" alt="dishes photo")
             .dishes-card__type Ужин
             h3.dishes-card__title Быстрые бутерброды
-            div.dishes-card__date
+            div.dishes-card__info
                 | Февраль 29, 2017
-                | |
-                .coments
+                .dishes-card__line
+                .dishes-card__comments
+                    i.fas.fa-comments
                     | 3
             p.dishes-card__paragraph Neque porro dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia numquam eius modi aliquam quaerat voluptatem.
             .dishes-card__links
-                a.dishes-card__more(href="#") Подробнее
+                a.dishes-card__more(href="#")
+                    | Подробнее
+                    .fas.fa-angle-right
                 .socials
                     a.socials__link(href="#")
                         i.fab.fa-facebook-f
@@ -157,22 +190,23 @@ section.dishes-cards
                         i.fab.fa-vk
                     a.socials__link(href="#")
                         i.fab.fa-twitter
-                    a.socials__link(href="#")
-                        i.fab.fa-instagram
                     a.socials__link(href="#")
                         i.fab.fa-instagram
         .dishes-card
             img(src="assets/img/dishes-8.jpg" alt="dishes photo")
             .dishes-card__type Супы
             h3.dishes-card__title Чечевичный суп
-            div.dishes-card__date
+            div.dishes-card__info
                 | Февраль 29, 2017
-                | |
-                .coments
+                .dishes-card__line
+                .dishes-card__comments
+                    i.fas.fa-comments
                     | 0
             p.dishes-card__paragraph Consectetur adipisicing elit, eiusmod tempor incididunt labore et dolore magna aliqua.
             .dishes-card__links
-                a.dishes-card__more(href="#") Подробнее
+                a.dishes-card__more(href="#")
+                    |Подробнее
+                    .fas.fa-angle-right
                 .socials
                     a.socials__link(href="#")
                         i.fab.fa-facebook-f
@@ -180,7 +214,5 @@ section.dishes-cards
                         i.fab.fa-vk
                     a.socials__link(href="#")
                         i.fab.fa-twitter
-                    a.socials__link(href="#")
-                        i.fab.fa-instagram
                     a.socials__link(href="#")
                         i.fab.fa-instagram
