--- a/source/template/common/slider.pug
+++ b/source/template/common/slider.pug
@@ -9,8 +9,24 @@
                     | 3
             h2.dishes-slide__title Необычный десерт - сыр камамбер с сухофруктами
             a.dishes-slide__more Подробнее
-        .swiper-slide Slide 2
-        .swiper-slide Slide 3
+        .swiper-slide.dishes-slide
+            .dishes-slide__info
+                .tag Десерт
+                .date Февраль 29, 2017
+                .comments
+                    i.fas.fa-comments
+                    | 3
+            h2.dishes-slide__title 2Необычный десерт - сыр камамбер с сухофруктами
+            a.dishes-slide__more Подробнее
+        .swiper-slide.dishes-slide
+            .dishes-slide__info
+                .tag Десерт
+                .date Февраль 29, 2017
+                .comments
+                    i.fas.fa-comments
+                    | 3
+            h2.dishes-slide__title 3Необычный десерт - сыр камамбер с сухофруктами
+            a.dishes-slide__more Подробнее
     .swiper-pagination
     .swiper-button-next
     .swiper-button-prev
