--- a/source/template/common/instagram.pug
+++ b/source/template/common/instagram.pug
@@ -1,13 +1,18 @@
 section.instagram
     .instagram__wrapper
         a.instagram-card(href="#")
+            i.fab.fa-instagram
             img(src="assets/img/instagram-1.jpg", alt="Photo instagram")
         a.instagram-card(href="#")
+            i.fab.fa-instagram
             img(src="assets/img/instagram-2.jpg", alt="Photo instagram")
         a.instagram-card(href="#")
+            i.fab.fa-instagram
             img(src="assets/img/instagram-2.jpg", alt="Photo instagram")
         a.instagram-card(href="#")
+            i.fab.fa-instagram
             img(src="assets/img/instagram-4.jpg", alt="Photo instagram")
         a.instagram-card(href="#")
+            i.fab.fa-instagram
             img(src="assets/img/instagram-5.jpg", alt="Photo instagram")
 
