--- a/source/template/common/paginations.pug
+++ b/source/template/common/paginations.pug
@@ -1,19 +1,23 @@
-section.paginations
-    .paginations__wrapper
-        ul.paginations__items
-            li.paginations__item
-                a.paginations__link(href="#") <<
-            li.paginations__item
-                a.paginations__link(href="#") <
-            li.paginations__item
-                a.paginations__link(href="#") 1
-            li.paginations__item
-                a.paginations__link(href="#") 2
-            li.paginations__item
-                a.paginations__link(href="#") ...
-            li.paginations__item
-                a.paginations__link(href="#") 10
-            li.paginations__item
-                a.paginations__link(href="#") >
-            li.paginations__item
-                a.paginations__link(href="#") >>
+section.pagination
+    .pagination__wrapper
+        ul.pagination__items
+            li.pagination__item
+                a.pagination__link(href="#")
+                    i.fas.fa-angle-double-left
+            li.pagination__item
+                a.pagination__link(href="#")
+                    i.fas.fa-angle-left
+            li.pagination__item
+                a.pagination__link(href="#").active 1
+            li.pagination__item
+                a.pagination__link(href="#") 2
+            li.pagination__item
+                a.pagination__link(href="#") ...
+            li.pagination__item
+                a.pagination__link(href="#") 10
+            li.pagination__item
+                a.pagination__link(href="#")
+                    i.fas.fa-angle-double-right
+            li.pagination__item
+                a.pagination__link(href="#")
+                    i.fas.fa-angle-right
